--- a/anime.css
+++ b/anime.css
@@ -44,7 +44,7 @@ header {
 
 /* Bouton Accueil */
 .home-btn {
-    padding: 10px 15px;
+    padding: 10px 18px;
     background: #4b6cb7;
     color: #fff;
     border-radius: 20px;
@@ -222,6 +222,7 @@ footer {
     .home-btn {
         padding: 8px 14px;
         font-size: 15px;
+        border-radious:10px;
     }
 }
 
