--- a/anime.css
+++ b/anime.css
@@ -252,3 +252,44 @@ footer {
         font-size: 13px;
     }
 }
+.success {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
+  width: 320px;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  background: #EDFBD8;
+  border-radius: 8px;
+  box-shadow: 0 0 5px -3px #111;
+  animation: slideIn .3s ease;
+}
+
+@keyframes slideIn {
+  from { transform: translateY(20px); opacity: 0; }
+  to   { transform: translateY(0); opacity: 1; }
+}
+
+.success__icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+}
+
+.success__icon path {
+  fill: #84D65A;
+}
+
+.success__title {
+  font-size: 14px;
+  font-weight: 500;
+  color: #2B641E;
+}
+
+.success__close {
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.success__close path {
+  fill: #2B641E;
+}
