--- a/anime.css
+++ b/anime.css
@@ -15,7 +15,7 @@ body {
 
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* occupe toute la hauteur */
+    min-height: 100vh;
 }
 
 body.dark {
